--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <div class="destination" id="kerbala">
                 <h2>Kerbala</h2>
             </div>
+            
+            <div class="destination" id="najaf">
+                <h2>Najaf</h2>
+            </div>
         </div>
     </div>
 
